--- a/package.json
+++ b/package.json
@@ -6,36 +6,38 @@
     "node": ">=0.12.0"
   },
   "devDependencies": {
-    "babel-core": "^6.4.0",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-object-assign": "^6.5.0",
     "babel-preset-es2015": "^6.3.13",
     "browser-sync": "^2.2.1",
     "cssp": "^1.0.6",
-    "del": "^2.2.0",
+    "del": "^3.0.0",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.1",
-    "gulp-babel": "^6.1.1",
-    "gulp-cache": "^0.4.2",
-    "gulp-cdnizer": "^1.1.6",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-cache": "^1.0.2",
+    "gulp-cdnizer": "^2.0.0",
     "gulp-css-sandbox": "^0.0.0",
     "gulp-cssnano": "^2.0.0",
-    "gulp-eslint": "^0.13.2",
-    "gulp-htmlmin": "^1.3.0",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.2.1",
+    "gulp-eslint": "^5.0.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-json-editor": "^2.2.1",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-mocha": "^2.2.0",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-mocha": "^6.0.0",
     "gulp-plumber": "^1.0.1",
-    "gulp-size": "^1.2.1",
-    "gulp-sourcemaps": "^1.5.0",
-    "gulp-uglify": "^1.1.0",
+    "gulp-size": "^3.0.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify": "^3.0.1",
     "gulp-useref": "^3.0.0",
     "main-bower-files": "^2.5.0",
-    "nock": "^7.2.2",
+    "nock": "^10.0.0",
     "traverse": "^0.6.6",
-    "wiredep": "^2.2.2",
-    "zombie": "^4.2.1"
+    "wiredep": "^4.0.0",
+    "zombie": "^6.1.3"
   },
   "eslintConfig": {
     "env": {
